fix: update API endpoint to use the production URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
 <div id="skills"></div>
 
 <script>
-const API = "/api"; 
+const API = "https://infoproject.onrender.com/api";
 
 
 async function loadProfile() {
